[tool.poetry]
name = "03-week"
version = "0.1.0"
description = ""
authors = ["Eduardo Martins Ribeiro <98466110+edumartinsrib@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
